メール通知機能を追加

--- a/zappa-s3-docker_yolo-gpu-movie/templates/index.html
+++ b/zappa-s3-docker_yolo-gpu-movie/templates/index.html
@@ -5,6 +5,16 @@
         <title>zappa-s3-docker</title>
     </head>
     <body>
+        {% if warning %}
+        <div class="alert alert-warning" role="alert">
+          <strong>Warning!</strong> 許可されていない拡張子、もしくはファイルが指定されてません
+        </div>
+        {% endif %}
+        {% if warning2 %}
+        <div class="alert alert-warning" role="alert">
+          <strong>Warning!</strong> メールアドレスを入力して下さい
+        </div>
+        {% endif %}
         <form method="post" action="{{ url_for('send') }}" enctype="multipart/form-data" >
           <input type="file" id="upload_file" name="upload_file" class="col-sm-4">
           <input type="submit" value="UPLOAD" class="btn btn-primary btn-lg" >
@@ -13,8 +23,9 @@
           <p><img src="{{ upload_url }}" height="150" ></p>
           <div style="margin-top:10px ;margin-right:5px">
             <form method="post" action="{{ url_for('augmentation') }}">
+                <p>Enter your e-mail address to notify：<input type="email" name="mail" placeholder="sample@gmail.com"></p>
               <input type="hidden" name="button_name" value="YOLO">
-              <button type="submit" name = "upload_url" value="{{ upload_url }}" class="btn btn-secondary btn-lg">YOLO</button>
+              <button type="submit" name = "upload_url" value="{{ upload_url }}" class="btn btn-secondary btn-lg">Object Detection by YOLO</button>
             </form>
           </div>
         {% endif %}
